# escodegen-python

./: README.md  pyproject.toml  requirements.txt
escodegen/: __init__.py  escodegen.py
escodegen/acornwalk/: __init__.py  walk.py
