[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escodegen"
version = "1.0.10"
authors = [
	{ name="0x78", email="contact@0x78.com" }
]
requires-python = ">=3.6"
description = "ECMAScript code generator"
readme = "README.md"
keywords = [
    "escodegen",
    "ecmascript",
    "javascript",
    "generator",
    "generate",
	"ast"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python :: 3.6"
]
dependencies = [
	"esutils"
]

[project.urls]
"Homepage" = "https://github.com/0o120/escodegen-python"

